# nerf-quality-prediction

./: README.md  eval.bash  pyproject.toml  run_queue.bash  run_queue2.bash  vis.ipynb
nqp/configs/: dataparser_configs.py  method_configs.py
nqp/data/dataparsers/: nqp_blender_dataparser.py  nqp_dataparser.py  nqp_minimal_dataparser.py  nqp_nerfosr_dataparser.py
nqp/fields/: tensorf_field.py
nqp/model_components/: renderers.py
nqp/models/: base_model.py  instant_ngp.py  mipnerf.py  nerfacto.py  tensorf.py  vanilla_nerf.py
nqp/pipelines/: nqp_pipeline.py
nqp/utils/: eval_vis.py  hist.py  post_processing.py  raybundle.py  spacial.py  utils.py
