[project]
name = "nqp"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = [
    "nerfstudio==0.3.4",
    "torchtyping==0.1.4",
    "matplotlib==3.5.3",
    "ipympl==0.9.3",
    "kaleido==0.2.1",
    "openexr @ git+https://github.com/jamesbowman/openexrpython@91ec8a81a0bad7b30170c66769464cc7ab44ce4b",  
] 

[tool.setuptools.packages.find]
include = ["nqp*"]

[project.entry-points.'nerfstudio.method_configs']
nqp-nerfacto = 'nqp.configs.method_configs:nqp_nerfacto'
nqp-instant_ngp = 'nqp.configs.method_configs:nqp_instant_ngp' 
nqp-mipnerf = 'nqp.configs.method_configs:nqp_mipnerf' 
nqp-vanilla_nerf = 'nqp.configs.method_configs:nqp_vanilla_nerf' 
nqp-tensorf = 'nqp.configs.method_configs:nqp_tensorf' 

[project.entry-points.'nerfstudio.dataparser_configs']
nqp-data = 'nqp.configs.dataparser_configs:nqp_dataparser'
nqp-blender-data = 'nqp.configs.dataparser_configs:nqp_blender_dataparser'
nqp-minimal-data = 'nqp.configs.dataparser_configs:nqp_minimal_dataparser'
nqp-nerfosr-data = 'nqp.configs.dataparser_configs:nqp_nerfosr_dataparser'
